fix project-item and news-item text sizes & alignment

--- a/src/components/news-item.css
+++ b/src/components/news-item.css
@@ -21,6 +21,7 @@
 .news-item > main {
     line-height: 1.4;
     margin: 15px 0px 8px 10px;
+    text-align: justify;
 }
 
 .news-item > footer {
@@ -29,7 +30,7 @@
 
 
 .news-item h1 {
-    font-size: 1.6em;
+    font-size: 1.4em;
     margin-bottom: 15px;
 }
 
